--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,29 +1,34 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Patient Log In
+     Clinical Reminder
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <!--<ion-img src="../../assets/imgs/login.png"></ion-img>-->
-  <div class="login-part">
-    <ion-list>
+  <div style="padding-top: 30px">
+    <div padding-horizontal text-center>
+      <img src="../../assets/imgs/login.png" style="width: 60px; height: 60px">
+      <h6 text-capitalize padding>Log In</h6>
+    </div>
+
+    <form [formGroup]="loginForm">
+    <ion-list padding-horizontal>
       <ion-item>
         <ion-label floating>Username</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" formControlName="username"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Password</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input type="password" formControlName="password"></ion-input>
       </ion-item>
-
     </ion-list>
-
+    </form>
     <div padding>
-      <button ion-button (click)="gotoList($event)">Sign In</button>
+      <button ion-button (click)="gotoList($event)" block [disabled]="!loginForm.valid">Sign In</button>
     </div>
   </div>
 
