add priority to detail

--- a/src/pages/reminderList/detail.html
+++ b/src/pages/reminderList/detail.html
@@ -21,6 +21,12 @@
       <p>{{"Doctor: " + note.doctor}}</p>
     </ion-item>
     <ion-item>
+      Priority:
+      <ion-note item-end>
+        Middle
+      </ion-note>
+    </ion-item>
+    <ion-item>
       Start Time:
       <ion-note item-end>
         {{note.startTime}}
